# Karazeh

./: .doxygen  .gitignore  .html  404.html  CHANGELOG  CMakeLists.txt  KarazehConfig.h.cmake  KarazehConfig.h.in  README  README.md  TODO  config.js  doc-architecture.html  doc-authoring_patches.html  doc-building.html  doc-faq.html  doc-internals.html  doc-overview.html  index.html  karazeh.sublime-project  megadoc.conf.js  megadoc.js  megadoc__vendor.js  package.json  styles.css
api/html/: annotated.html  annotated_dup.js  classes.html  classkzh_1_1create__operation-members.html  classkzh_1_1create__operation.html  classkzh_1_1create__operation.js  classkzh_1_1create__operation__coll__graph.map  classkzh_1_1create__operation__coll__graph.md5  classkzh_1_1create__operation__inherit__graph.map  classkzh_1_1create__operation__inherit__graph.md5  classkzh_1_1delete__operation-members.html  classkzh_1_1delete__operation.html  classkzh_1_1delete__operation.js  classkzh_1_1delete__operation__coll__graph.map  classkzh_1_1delete__operation__coll__graph.md5  classkzh_1_1delete__operation__inherit__graph.map  classkzh_1_1delete__operation__inherit__graph.md5  classkzh_1_1delta__encoder-members.html  classkzh_1_1delta__encoder.html  classkzh_1_1delta__encoder.js  classkzh_1_1delta__encoder__coll__graph.map  classkzh_1_1delta__encoder__coll__graph.md5  classkzh_1_1delta__encoder__inherit__graph.map  classkzh_1_1delta__encoder__inherit__graph.md5  classkzh_1_1downloader-members.html  classkzh_1_1downloader.html  classkzh_1_1downloader.js  classkzh_1_1downloader__coll__graph.map  classkzh_1_1downloader__coll__graph.md5  classkzh_1_1file__manager-members.html  classkzh_1_1file__manager.html  classkzh_1_1file__manager.js  classkzh_1_1file__manager__coll__graph.map  classkzh_1_1file__manager__coll__graph.md5  classkzh_1_1hasher-members.html  classkzh_1_1hasher.html  classkzh_1_1hasher.js  (+346 more)
doc/: Doxyfile  FAQ.md  Patching.xmind  architecture.md  building.md  internals.md  overview.md  release_manifest.template.xml  valgrind  version_manifest.template.xml
examples/: CMakeLists.txt
examples/basic/: main.cpp
include/: Dispatcher.h  Downloader.h  Entry.h  Event.h  EventHandler.h  EventListener.h  EventManager.h  Handler.h  InputManager.h  KarazehConfig.h  Launcher.h  Listener.h  PatchEntry.h  PatchVersion.h  Patcher.h  Pixy.h  PixyConstants.h  PixyExceptions.h  PixyLogLayout.h  PixyPlatform.h  PixyThread.h  PixyUtility.h  RenderSystem.h  Renderer.h  Repository.h  TarManager.h  UIEngine.h  Utility.h  karazeh.hpp  logger.hpp  md5.hpp
plugins/: megadoc-plugin-markdown.js  megadoc-theme-qt.js
scripts/: win32__stage.sh
src/: CMakeLists.txt  Dispatcher.cpp  Downloader.cpp  Event.cpp  EventListener.cpp  EventManager.cpp  InputManager.cpp  Launcher.cpp  Patcher.cpp  Patcher.mm  PixyLogLayout.cpp  Repository.cpp  TarManager.cpp  bsdiff.c  bsdiff.cpp  bspatch.c  bspatch.cpp  delta_encoder.cpp  downloader.cpp  file_manager.cpp  hasher.cpp  karazeh.cpp  logger.cpp  main.cpp  operation.cpp  patcher.cpp  path_resolver.cpp  release_manifest.cpp  resource_manager.cpp  settings.cpp  version_manifest.cpp
src/Renderers/CEGUI/: CEGUIRenderer.cpp
src/Renderers/Cocoa/: CocoaRenderer.mm  KAppDelegate.mm
src/Renderers/GTK3/: GTK3Renderer.cpp
src/Renderers/Ogre/: Event.cpp  EventListener.cpp  EventManager.cpp  InputManager.cpp  OgreRenderer.cpp
src/Renderers/Qt/: QtRenderer.cpp  resources.qrc
src/Renderers/Vanilla/: VanillaRenderer.cpp
src/__tests__/: delta_encoder.test.cpp  downloader.test.cpp  file_manager.test.cpp  patcher.test.cpp  path_resolver.test.cpp  version_manifest.test.cpp
src/hashers/: md5_hasher.cpp
src/hashers/__tests__/: md5_hasher.test.cpp
src/operations/: create.cpp  create_operation.cpp  delete.cpp  update.cpp
src/operations/__tests__/: create.test.cpp  update.test.cpp
test/: CMakeLists.txt  delta_encoder.test.cpp  downloader.test.cpp  file_manager.test.cpp  hasher.test.cpp  main.cpp  patcher.test.cpp  path_resolver.test.cpp  resource_manager.test.cpp  test_utils.cpp  test_utils.hpp
test/fixture/: Karazeh  create_me.00.txt  manifest.template.xml  version.xml
test/fixture/manifests/: empty.xml  invalid_vm_missing_ilist.xml  invalid_vm_missing_ilist_files.xml  invalid_vm_missing_ilist_name.xml  invalid_vm_missing_initial_release.xml  invalid_vm_missing_releases.xml  invalid_vm_undefined_ilist.xml  invalid_vm_unmapped_release.xml
test/fixture/release_manifests/: test-0.1.0.xml
test/fixture/releases/: test-0.1.1.xml  test-0.1.2.xml
test/fixture/sample_application/0.1.0/data/media/materials/scripts/: terrain.material
test/fixture/sample_application/0.1.0/src/: main.c
test/fixture/sample_application/0.1.1/data/: common.tar
test/fixture/sample_application/0.1.1/data/media/materials/scripts/: skies.material
test/fixture/sample_application/0.1.1/src/: main.c
test/fixture/sample_application/0.1.2/data/: common.tar  hash_me.txt
test/fixture/sample_application/0.1.2/src/: main.c
test/fixture/sample_application/manifests/: release__0.1.1.json  release__0.1.1.xml  release__0.1.2.json  release__0.1.2.xml  version.json  version.xml
test/fixture/sample_application/patch_v0.1.1-v0.1.2/: data_common.tar.delta  data_common.tar.signature
test/hashers/: md5_hasher.test.cpp
test/system/: patch_server.rb
test/unit/: CMakeLists.txt  create_test.sh  delta_encoder_test.cpp  main.cpp  main.cpp.in  patcher_test.cpp  resource_manager_test.cpp  test.hpp  test_helper.hpp
test/unit/file_operations_test/: file_operations_test.cpp  file_operations_test.hpp  main.cpp
test/unit/hashers/: md5_hasher_test.cpp
test/unit/manifests_test/: main.cpp  manifests_test.cpp  manifests_test.hpp
test/unit/md5_hasher_test/: main.cpp  md5_hasher_test.cpp  md5_hasher_test.hpp
test/unit/permissions_test/: main.cpp  permissions_test.cpp  permissions_test.hpp
test/unit/rdiff_patch_test/: main.cpp  rdiff_patch_test.cpp  rdiff_patch_test.hpp
test/unit/resources_test/: main.cpp  resources_test.cpp  resources_test.hpp
test/unit/template_test/: template_test.cpp  template_test.hpp
(+153 files in other folders)
