CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(DEFINED CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE} CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
ELSE()
  SET(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
ENDIF()

PROJECT(karazeh)

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET(CMAKE_INSTALL_PREFIX ${EXECUTABLE_OUTPUT_PATH} CACHE PATH "Karazeh install prefix" FORCE)
ENDIF()

INCLUDE(CheckIncludeFileCXX)
INCLUDE(CMakeDependentOption)

SET(CMAKE_MODULE_PATH
  ${CMAKE_SOURCE_DIR}
  ${CMAKE_SOURCE_DIR}/cmake/modules
  ${CMAKE_SOURCE_DIR}/deps/librsync-2.0.0/cmake
  ${CMAKE_MODULE_PATH}
)

SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib")
SET(Boost_USE_MULTITHREAD ON)

IF(WIN32)
  ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")
  ADD_DEFINITIONS("-DCURL_STATICLIB")
ELSE()
  ADD_DEFINITIONS("-DENABLE_BINRELOC")
ENDIF()

# Options
OPTION(KARAZEH_BUILD_TESTS OFF "Build the tests")
OPTION(KARAZEH_BUILD_EXAMPLES OFF "Build the examples")

FIND_PACKAGE(Boost 1.49	COMPONENTS filesystem system REQUIRED)
FIND_PACKAGE(CURL REQUIRED)

INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIRS}
  ${CURL_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
  ${BOOST_LIBRARY_DIRS}
  # on windows it's like this...
  ${Boost_LIBRARY_DIRS}
  ${CURL_LIBRARY_DIRS}
)

LINK_LIBRARIES(
  ${Boost_LIBRARIES}
  ${CURL_LIBRARIES}
)

ADD_SUBDIRECTORY(deps/librsync-2.0.0)
ADD_SUBDIRECTORY(src)

IF (KARAZEH_BUILD_TESTS)
  ADD_SUBDIRECTORY(test)
ENDIF()

IF (KARAZEH_BUILD_EXAMPLES)
  ADD_SUBDIRECTORY(examples)
ENDIF()
